item card title overflow fix

--- a/src/app/item-list/item-list.component.scss
+++ b/src/app/item-list/item-list.component.scss
@@ -13,6 +13,11 @@
     .card-item-image {
         object-fit: cover;
     }
+    .card-title {
+        overflow: hidden;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+    }
     .card-item-desc {
         overflow: hidden;
         width: 98%;
